--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -337,7 +337,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="AkJ-ox-de5" customClass="PFImageView">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="AkJ-ox-de5" customClass="PFImageView">
                                 <rect key="frame" x="20" y="108" width="120" height="120"/>
                                 <gestureRecognizers/>
                                 <constraints>
@@ -354,37 +354,38 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3QR-sP-AWX">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="knD-Jp-Lci">
                                 <rect key="frame" x="0.0" y="258" width="414" height="638"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="63N-0J-JOd">
-                                    <size key="itemSize" width="152" height="140"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="aem-G1-9JT">
+                                    <size key="itemSize" width="163" height="154"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCell" id="RhK-2J-ahl" customClass="CollectionViewCell">
-                                        <rect key="frame" x="0.0" y="0.0" width="152" height="140"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCell" id="PXn-8F-WcE" customClass="CollectionViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="163" height="154"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="dwt-Rb-ZWY">
-                                            <rect key="frame" x="0.0" y="0.0" width="152" height="140"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="inl-y7-Wns">
+                                            <rect key="frame" x="0.0" y="0.0" width="163" height="154"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J1p-QH-YkK" customClass="PFImageView">
-                                                    <rect key="frame" x="0.0" y="0.0" width="152" height="140"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g9S-99-tby" customClass="PFImageView">
+                                                    <rect key="frame" x="0.0" y="0.0" width="163" height="154"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="J1p-QH-YkK" secondAttribute="bottom" id="FmY-n9-hUm"/>
-                                                <constraint firstItem="J1p-QH-YkK" firstAttribute="top" secondItem="dwt-Rb-ZWY" secondAttribute="top" id="Q9d-0L-DCh"/>
-                                                <constraint firstAttribute="trailing" secondItem="J1p-QH-YkK" secondAttribute="trailing" id="bYE-81-bHo"/>
-                                                <constraint firstItem="J1p-QH-YkK" firstAttribute="leading" secondItem="dwt-Rb-ZWY" secondAttribute="leading" id="yJy-7T-UnJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="g9S-99-tby" secondAttribute="trailing" id="63S-Tg-Lgm"/>
+                                                <constraint firstItem="g9S-99-tby" firstAttribute="top" secondItem="inl-y7-Wns" secondAttribute="top" id="C5O-fn-2aA"/>
+                                                <constraint firstItem="g9S-99-tby" firstAttribute="leading" secondItem="inl-y7-Wns" secondAttribute="leading" id="Fud-c3-aBs"/>
+                                                <constraint firstAttribute="bottom" secondItem="g9S-99-tby" secondAttribute="bottom" id="chn-YB-zui"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="152" height="140"/>
+                                        <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <size key="customSize" width="163" height="154"/>
                                         <connections>
-                                            <outlet property="postImageView" destination="J1p-QH-YkK" id="9DF-p2-A96"/>
+                                            <outlet property="postImageView" destination="g9S-99-tby" id="Z0F-AU-7W7"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -392,21 +393,21 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="knD-Jp-Lci" firstAttribute="leading" secondItem="x4s-uA-56D" secondAttribute="leading" id="0ae-0y-iiI"/>
                             <constraint firstItem="5Ck-my-6Zd" firstAttribute="top" secondItem="AkJ-ox-de5" secondAttribute="top" id="7Yj-Yt-084"/>
+                            <constraint firstItem="knD-Jp-Lci" firstAttribute="top" secondItem="AkJ-ox-de5" secondAttribute="bottom" constant="30" id="Bt7-XK-eed"/>
                             <constraint firstItem="AkJ-ox-de5" firstAttribute="leading" secondItem="x4s-uA-56D" secondAttribute="leading" constant="20" id="Ed5-ro-Lh1"/>
-                            <constraint firstItem="3QR-sP-AWX" firstAttribute="leading" secondItem="x4s-uA-56D" secondAttribute="leading" id="GoF-eD-VK6"/>
-                            <constraint firstAttribute="bottom" secondItem="3QR-sP-AWX" secondAttribute="bottom" id="PlX-Vo-C1S"/>
-                            <constraint firstItem="3QR-sP-AWX" firstAttribute="trailing" secondItem="x4s-uA-56D" secondAttribute="trailing" id="QRG-GZ-MEh"/>
-                            <constraint firstItem="3QR-sP-AWX" firstAttribute="top" secondItem="AkJ-ox-de5" secondAttribute="bottom" constant="30" id="RtC-q1-xU3"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5Ck-my-6Zd" secondAttribute="trailing" constant="20" id="TaM-Sh-tVf"/>
                             <constraint firstItem="AkJ-ox-de5" firstAttribute="top" secondItem="x4s-uA-56D" secondAttribute="top" constant="20" id="bc6-6k-zPL"/>
+                            <constraint firstAttribute="bottom" secondItem="knD-Jp-Lci" secondAttribute="bottom" id="dnj-du-hP7"/>
                             <constraint firstItem="5Ck-my-6Zd" firstAttribute="leading" secondItem="AkJ-ox-de5" secondAttribute="trailing" constant="8" id="sR8-oa-R59"/>
+                            <constraint firstItem="knD-Jp-Lci" firstAttribute="trailing" secondItem="x4s-uA-56D" secondAttribute="trailing" id="zGR-pN-Enm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="x4s-uA-56D"/>
                     </view>
                     <navigationItem key="navigationItem" id="h8x-iz-sQ7"/>
                     <connections>
-                        <outlet property="collectionView" destination="3QR-sP-AWX" id="m0R-aj-LaN"/>
+                        <outlet property="collectionView" destination="knD-Jp-Lci" id="wIk-vJ-81W"/>
                         <outlet property="profilePic" destination="AkJ-ox-de5" id="xsX-BD-Roz"/>
                         <outlet property="usernameLabel" destination="5Ck-my-6Zd" id="pEv-st-JSE"/>
                     </connections>
@@ -414,7 +415,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eoJ-cV-bcz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="a5G-LB-Atc">
                     <connections>
-                        <action selector="onTapImage:" destination="nK5-eh-Hvn" id="6YX-W3-UFH"/>
+                        <action selector="onTapImage:" destination="nK5-eh-Hvn" id="OOW-BW-n8F"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
