--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -124,32 +124,64 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="PhotoCell" id="xaC-zK-n8E" customClass="PhotoCell">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="367"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="426"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xaC-zK-n8E" id="TEq-n3-YXF">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="367"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="426"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="czk-d6-y17" customClass="PFImageView">
-                                                    <rect key="frame" x="0.0" y="30" width="414" height="300"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="czk-d6-y17" customClass="PFImageView">
+                                                    <rect key="frame" x="0.0" y="59" width="414" height="300"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="300" id="yEC-w9-Zzb"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPD-33-fHH">
-                                                    <rect key="frame" x="20" y="338" width="42" height="20.5"/>
+                                                    <rect key="frame" x="20" y="397" width="42" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZaI-wV-G4b">
+                                                    <rect key="frame" x="61" y="367" width="22" height="22"/>
+                                                    <color key="tintColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <state key="normal" image="message" catalog="system"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WPX-Wf-s30">
+                                                    <rect key="frame" x="20" y="367" width="21" height="22"/>
+                                                    <color key="tintColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <state key="normal" image="heart" catalog="system"/>
+                                                </button>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="x8f-BJ-vWR">
+                                                    <rect key="frame" x="20" y="11" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="40" id="e6F-hb-0Xi"/>
+                                                        <constraint firstAttribute="height" constant="40" id="zvL-ok-jBW"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9b7-Nb-7cu">
+                                                    <rect key="frame" x="68" y="22.5" width="78.5" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="MPD-33-fHH" firstAttribute="leading" secondItem="TEq-n3-YXF" secondAttribute="leading" constant="20" id="153-KP-fNB"/>
-                                                <constraint firstItem="czk-d6-y17" firstAttribute="top" secondItem="TEq-n3-YXF" secondAttribute="top" constant="30" id="1As-7j-hib"/>
+                                                <constraint firstItem="czk-d6-y17" firstAttribute="top" secondItem="x8f-BJ-vWR" secondAttribute="bottom" constant="8" id="1As-7j-hib"/>
                                                 <constraint firstItem="czk-d6-y17" firstAttribute="leading" secondItem="TEq-n3-YXF" secondAttribute="leading" id="6f9-ub-pFG"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="MPD-33-fHH" secondAttribute="bottom" constant="8" id="84x-YB-qrT"/>
-                                                <constraint firstItem="MPD-33-fHH" firstAttribute="top" secondItem="czk-d6-y17" secondAttribute="bottom" constant="8" id="Ye0-Dy-FE1"/>
+                                                <constraint firstItem="x8f-BJ-vWR" firstAttribute="top" secondItem="TEq-n3-YXF" secondAttribute="top" constant="11" id="KDV-lD-4PC"/>
+                                                <constraint firstItem="MPD-33-fHH" firstAttribute="leading" secondItem="WPX-Wf-s30" secondAttribute="leading" id="KS2-Pu-rrk"/>
+                                                <constraint firstItem="WPX-Wf-s30" firstAttribute="top" secondItem="czk-d6-y17" secondAttribute="bottom" constant="8" id="REB-fh-vX1"/>
+                                                <constraint firstItem="MPD-33-fHH" firstAttribute="top" secondItem="WPX-Wf-s30" secondAttribute="bottom" constant="8" id="Ye0-Dy-FE1"/>
+                                                <constraint firstItem="9b7-Nb-7cu" firstAttribute="leading" secondItem="x8f-BJ-vWR" secondAttribute="trailing" constant="8" id="ZZv-sa-X1H"/>
+                                                <constraint firstItem="WPX-Wf-s30" firstAttribute="leading" secondItem="x8f-BJ-vWR" secondAttribute="leading" id="dld-aF-rMK"/>
+                                                <constraint firstItem="ZaI-wV-G4b" firstAttribute="centerY" secondItem="WPX-Wf-s30" secondAttribute="centerY" id="g4b-nR-zIv"/>
+                                                <constraint firstItem="9b7-Nb-7cu" firstAttribute="centerY" secondItem="x8f-BJ-vWR" secondAttribute="centerY" id="jlx-6e-UG9"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="9b7-Nb-7cu" secondAttribute="trailing" constant="20" id="l5f-Te-R5V"/>
                                                 <constraint firstAttribute="trailing" secondItem="czk-d6-y17" secondAttribute="trailing" id="mSr-Br-gEj"/>
+                                                <constraint firstItem="ZaI-wV-G4b" firstAttribute="leading" secondItem="WPX-Wf-s30" secondAttribute="trailing" constant="20" id="pPG-KV-MA5"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="MPD-33-fHH" secondAttribute="trailing" constant="20" id="tYX-7Y-CD9"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -393,13 +425,13 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="knD-Jp-Lci" firstAttribute="leading" secondItem="x4s-uA-56D" secondAttribute="leading" id="0ae-0y-iiI"/>
                             <constraint firstItem="5Ck-my-6Zd" firstAttribute="top" secondItem="AkJ-ox-de5" secondAttribute="top" id="7Yj-Yt-084"/>
-                            <constraint firstItem="knD-Jp-Lci" firstAttribute="top" secondItem="AkJ-ox-de5" secondAttribute="bottom" constant="30" id="Bt7-XK-eed"/>
                             <constraint firstItem="AkJ-ox-de5" firstAttribute="leading" secondItem="x4s-uA-56D" secondAttribute="leading" constant="20" id="Ed5-ro-Lh1"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5Ck-my-6Zd" secondAttribute="trailing" constant="20" id="TaM-Sh-tVf"/>
                             <constraint firstItem="AkJ-ox-de5" firstAttribute="top" secondItem="x4s-uA-56D" secondAttribute="top" constant="20" id="bc6-6k-zPL"/>
                             <constraint firstAttribute="bottom" secondItem="knD-Jp-Lci" secondAttribute="bottom" id="dnj-du-hP7"/>
+                            <constraint firstItem="knD-Jp-Lci" firstAttribute="leading" secondItem="x4s-uA-56D" secondAttribute="leading" id="fBY-IC-V5L"/>
+                            <constraint firstItem="knD-Jp-Lci" firstAttribute="top" secondItem="AkJ-ox-de5" secondAttribute="bottom" constant="30" id="mai-aP-8cX"/>
                             <constraint firstItem="5Ck-my-6Zd" firstAttribute="leading" secondItem="AkJ-ox-de5" secondAttribute="trailing" constant="8" id="sR8-oa-R59"/>
                             <constraint firstItem="knD-Jp-Lci" firstAttribute="trailing" secondItem="x4s-uA-56D" secondAttribute="trailing" id="zGR-pN-Enm"/>
                         </constraints>
@@ -522,8 +554,10 @@
     <resources>
         <image name="color-insta" width="60" height="60"/>
         <image name="feed_tab" width="25" height="25"/>
+        <image name="heart" catalog="system" width="128" height="109"/>
         <image name="image_placeholder" width="375" height="375"/>
         <image name="insta_camera_btn" width="25" height="25"/>
+        <image name="message" catalog="system" width="128" height="113"/>
         <image name="profile_tab" width="25" height="25"/>
     </resources>
 </document>
