--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -165,12 +165,21 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4m" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k6Q-eV-dZI">
+                                                    <rect key="frame" x="383" y="367" width="21" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="MPD-33-fHH" firstAttribute="leading" secondItem="TEq-n3-YXF" secondAttribute="leading" constant="20" id="153-KP-fNB"/>
                                                 <constraint firstItem="czk-d6-y17" firstAttribute="top" secondItem="x8f-BJ-vWR" secondAttribute="bottom" constant="8" id="1As-7j-hib"/>
+                                                <constraint firstAttribute="trailing" secondItem="k6Q-eV-dZI" secondAttribute="trailing" constant="10" id="1tG-ul-LWk"/>
                                                 <constraint firstItem="czk-d6-y17" firstAttribute="leading" secondItem="TEq-n3-YXF" secondAttribute="leading" id="6f9-ub-pFG"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="MPD-33-fHH" secondAttribute="bottom" constant="8" id="84x-YB-qrT"/>
+                                                <constraint firstItem="k6Q-eV-dZI" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ZaI-wV-G4b" secondAttribute="trailing" constant="10" id="ATA-8n-gCt"/>
+                                                <constraint firstItem="k6Q-eV-dZI" firstAttribute="top" secondItem="czk-d6-y17" secondAttribute="bottom" constant="8" id="CcJ-km-K2b"/>
                                                 <constraint firstItem="x8f-BJ-vWR" firstAttribute="top" secondItem="TEq-n3-YXF" secondAttribute="top" constant="11" id="KDV-lD-4PC"/>
                                                 <constraint firstItem="MPD-33-fHH" firstAttribute="leading" secondItem="WPX-Wf-s30" secondAttribute="leading" id="KS2-Pu-rrk"/>
                                                 <constraint firstItem="WPX-Wf-s30" firstAttribute="top" secondItem="czk-d6-y17" secondAttribute="bottom" constant="8" id="REB-fh-vX1"/>
@@ -189,6 +198,7 @@
                                             <outlet property="captionLabel" destination="MPD-33-fHH" id="hry-z6-wrI"/>
                                             <outlet property="postImageView" destination="czk-d6-y17" id="Sti-zm-YhQ"/>
                                             <outlet property="profilePic" destination="x8f-BJ-vWR" id="cNd-3B-4w8"/>
+                                            <outlet property="timeAgoLabel" destination="k6Q-eV-dZI" id="AYN-ta-4wZ"/>
                                             <outlet property="usernameLabel" destination="9b7-Nb-7cu" id="s5S-X3-TtE"/>
                                             <segue destination="sC8-Wv-2hL" kind="show" id="oKF-Aw-cWm"/>
                                         </connections>
